--- a/project_lock/app_lock/static/css/style.css
+++ b/project_lock/app_lock/static/css/style.css
@@ -1,38 +1,44 @@
 body {
-  background-color: white;
   font-family: "Roboto", sans-serif;
-  font-weight: 400;
   font-style: normal;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
+/* HEADER */
+
 #header {
-  height: 6rem;
-  width: 116rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  background-color: #3f6deb;
+  align-items: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+#header_sub {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 #logo_header{
-  width: 6rem;
-  height: 6rem;
+  width: 4vw;
+  margin-left: 2vw;
 }
 
-#design_header{
-  background: linear-gradient(180deg, #3b78ff, #18b2ff);
-  width: 94%;
-  border-radius: 0px 24px 0px 24px;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  vertical-align: center;
-  font-size: 4rem;
+#name_header{
+  margin-left: 1vw;
+  color: #ffffff;
 }
+
+#user_header{
+  margin-right: 2vw;
+  color: #ffffff;
+}
+
+/* FIM HEADER */
 
 #container {
   display: flex;
@@ -40,21 +46,48 @@ body {
   justify-content: center;
   align-items: center;
   width: 120rem;
+  background-color: #f0f1fe;
 }
 
-#navbar {
-  height: 3rem;
-  width: 98%;
+/* MENU */
+
+#navbar-container{
   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  flex-direction: row;
+  justify-content: space-around;
 }
+
+#navbar{
+  width: 22vw;
+  color: #2d2d2d;
+}
+
+#navbar ul{
+  padding: 0;
+  margin: 0;
+  margin-top: 32px;
+}
+
+#navbar li{
+  list-style-type: none;
+  height: 4vh;
+  padding: 8px;
+  padding-left: 24px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+#navbar li:hover{
+  color: #6284f2;
+  background-color: #f0f1fe;
+}
+
+/* FIM MENU */
 
 #add-search {
-  margin-top: 6rem;
-  width: 97%;
+  margin-top: 4vh;
+  width: 80vw;
   align-items: center;
   display: flex;
   justify-content: space-between;
@@ -62,113 +95,117 @@ body {
 
 #new-service,
 #search {
-  margin: 0.5rem;
+  margin: 0;
 }
 
 #list-services {
-  margin-top: 2rem;
+  margin: 4vh;
+  margin-top: 8vh;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  padding: 8px;
+  background-color: #ffffff;
 }
 
 #tb_services {
   text-align: center;
-  margin-bottom: 8rem;
 }
 
 #tb_services th{
-  background-color: #2e2e2e;
+  background-color: #6284f2;
   height: 2rem;
-  color:#ecebeb;
+  color:#ffffff;
   font-family: "Roboto", sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   font-style: normal;
-  font-size: 16px;
-  width: 16rem;
+  font-size: 14px;
+  width: 28vw;
+}
+
+#tb_services #id{
+  width: 4vw;
 }
 
 #tb_services td{
   font-size: 14px;
-  height: 2rem;
+  color: #2d2d2d;
+  height: 4vh;
 }
 
 tr:nth-child(even) {
-  background-color: #f2f2f2;
+  background-color: #e9eeff;
 }
 tr:nth-child(odd) {
   background-color: #ffffff;
 }
 
 tr:hover {
-  background-color: #ecebeb;
+  background-color: #ced9fd;
 }
 
 .btn_toggle, .btn_edit, .btn_delete{
-  width: 4.8rem;
-  height: 2rem;
-  margin: 1px;
-  border-radius: 4px;
   border-style: none;
+  background: none;
+  vertical-align: middle;
+  align-items: center;
+  padding: 0; /* Remove o padding */
+  margin: 0; /* Remove a margem */
+  display: inline-flex; /* Alinha o conteúdo do botão */
+  align-items: center; /* Alinha verticalmente o conteúdo */
+  justify-content: center; /* Alinha horizontalmente o conteúdo */
+  cursor: pointer;
 }
 
-.btn_toggle{
-  background-color: #e3c77b;
-  color: #69541a;
+#acoes{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
-.btn_toggle:hover{
-  background-color: #f8e4ac;
+#acoes img{
+  width: 1.6vw;
+  height: 1.6vw;
 }
 
-.btn_edit{
-  background-color: #e3a56b;
-  color: #914a08;
-}
-
-.btn_edit:hover{
-  background-color: #f8c798;
-}
-
-.btn_delete{
-  background-color: #e36b6b;
-  color: #691f1f;
-}
-
-.btn_delete:hover{
-  background-color: #f39393;
+#acoes img:hover{
+  width: 1.8vw;
+  height: 1.8vw;
 }
 
 #btn_new_service{
-  width: 12rem;
-  height: 3rem;
-  background-color: #a6c88c;
+  width: 7vw;
+  height: 5vh;
+  background-color: #6284f2;
   border-radius: 4px;
   border-style: none;
-  font-size: 16px;
-  color: #324d1e;
+  font-size: 14px;
+  color: #ffffff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 #btn_new_service:hover{
-  background-color: #badda0;
+  background-color: #6284f2;
+  opacity: 80%;
 }
 
 #btn_search{
-  width: 4rem;
-  height: 2rem;
-  background-color: #71b7e6;
+  width: 6vw;
+  height: 4vh;
+  background-color: #6284f2;
   border-style: none;
   border-radius: 4px;
-  color: #154b6e;
-  font-size: 14px;
+  color: #ffffff;
   vertical-align: middle;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 #img_search{
-  width: 16px;
-  height: 16px;
+  width: 20px;
+  height: 20px;
   vertical-align: middle;
 }
 
 #btn_search:hover{
-  background-color: #a1c7e0;
+  opacity: 90%;
 }
 
 #btn_export{
@@ -178,7 +215,7 @@ tr:hover {
   background-color: #acacac;
   border-radius: 4px;
   border-style: none;
-  font-size: 16px;
+  font-size: 12px;
   color: #2e2e2e;
 }
 
@@ -187,22 +224,29 @@ tr:hover {
 }
 
 #inp_search{
-  width: 24rem;
-  height: 2rem;
-  border-color: #71b7e6;
+  width: 24vw;
+  height: 4vh;
+  border-color: #6284f2;
   border-radius: 4px;
+  outline: none;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+#inp_search:focus{
+  border-color: #6284f2;
 }
 
 
 #footer {
-  margin-top: 5rem;
-  width: 114rem;
-  background-color: #3b78ff;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  padding-left: 2rem;
+  height: 4vw;
+  background-color: #3f6deb;
   color: white;
-  border-radius: 0px 24px 0px 24px;
+  display: flex;
+  align-items: center;
+}
+
+#footer p{
+  margin-left: 2vw;
 }
 
 
@@ -238,7 +282,7 @@ tr:hover {
   border: 1px solid #ccc;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
   font-family: "Roboto", sans-serif;
-  font-size: 14px;
+  font-size: 12px;
   border-radius: 6px;
 }
 
@@ -306,7 +350,7 @@ tr:hover {
   width: 80%;
   max-width: 500px;
   border-radius: 10px;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 #btn-password-generator{
